--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "method-override": "^3.0.0"
+    "method-override": "^3.0.0",
+    "mongoose": "^8.3.4"
   }
 }
