--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express": "^4.19.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.3.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
