--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "marked": "^12.0.2",
     "method-override": "^3.0.0",
-    "mongoose": "^8.3.4"
+    "mongoose": "^8.3.4",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
